--- a/styles.css
+++ b/styles.css
@@ -67,4 +67,8 @@ html, body {
     margin: 15px 0px 0px 20px;
   }
   
-  
+  @media only screen and (max-width: 600px) {
+    body {
+      background-color: lightblue;
+    }
+  }
